--- a/mlm/anton_sors.html
+++ b/mlm/anton_sors.html
@@ -2,7 +2,7 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>MLM Anton Sors</title>
+    <title>MLM А Н Т О Н   С О Р С</title>
     
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -43,7 +43,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
-    <meta property="og:title" content="MLM Anton Sors" />
+    <meta property="og:title" content="MLM А Н Т О Н   С О Р С" />
     <meta property="og:description" content="БЕСПЛАТНО
 ➡ Говорим о больших деньгах
 ➡ Воспитываем себя ежедневно
@@ -68,7 +68,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/85007271_493594788262419_6533208104090206208_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=LYemaKwfsN8AX_sk1MR&oh=2d6bcadc247cc9090850d6a044458db5&oe=5EAC554A" alt="Anton Sors">
+							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/85007271_493594788262419_6533208104090206208_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=kBaIET5w-m8AX_uNT3K&oh=150de5b050b6c37d6e5c7c3170e347dc&oe=5EB049CA" alt="А Н Т О Н   С О Р С">
 						</div>
 					</div>
 					<div class="main-sec__txt">
