--- a/mlm/maskarad_teatr.html
+++ b/mlm/maskarad_teatr.html
@@ -70,7 +70,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/21296769_116087589128593_300134122825711616_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=_A3NDZUmHKQAX9cf5R-&oh=647dba1bf3b425d220d8f5ac1a25baf4&oe=5EAE6473" alt="ДЕТСКИЕ ПРАЗДНИКИ МОСКВА. ШОУ">
+							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/21296769_116087589128593_300134122825711616_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=zynaBpimnSkAX_hNQRF&oh=4fa07d2ea13db4b0967c9f4bcdad82a6&oe=5EAE6473" alt="ДЕТСКИЕ ПРАЗДНИКИ МОСКВА. ШОУ">
 						</div>
 					</div>
 					<div class="main-sec__txt">
@@ -124,7 +124,7 @@
 					<div class="items-item">
 						<a href="sipsmos.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70523050_412652296059563_9194765411474735104_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=WEl3EClMYHIAX_ucj9S&oh=2619397c8d9c4fcda6765b941fbaf942&oe=5EAED7C5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИПС Москва">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70523050_412652296059563_9194765411474735104_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=iiWn1uewJNUAX-Z2O3V&oh=d6cfe475b9fe6cb92db3105d4ed147d1&oe=5EAED7C5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИПС Москва">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -136,7 +136,7 @@
 					<div class="items-item">
 						<a href="akademiya_udrive.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/69853806_522874301606341_3006634968722964480_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=l0zL0fJuS78AX_HSWTm&oh=45c207384bf9e82d00f5541dc19e13e7&oe=5EACF296" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Академия Юдрайв Москва">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/69853806_522874301606341_3006634968722964480_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=sOnuQUEjszUAX_7icvq&oh=47dfc42cb8ca884650445efb7a01a5e3&oe=5EB0E716" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Академия Юдрайв Москва">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -148,7 +148,7 @@
 					<div class="items-item">
 						<a href="abt_russia_official.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/17932336_362816270786302_3590074265493307392_a.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=6mtZL6lfQxgAX_SZaYF&oh=95abc5b2612bef54d2b5da04a38bb920&oe=5EAE6593" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ABT Sportsline Russia">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/17932336_362816270786302_3590074265493307392_a.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=WT6G9VCU2VMAX8_Rsyj&oh=635a40369282a4bfceea5e217141ea17&oe=5EAE6593" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ABT Sportsline Russia">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -158,9 +158,21 @@
 						</a>
 					</div>
 					<div class="items-item">
-						<a href="poetarium_parfenovoj.html" class="items-item__wrap">
+						<a href="electrotheatre.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/50293454_638154633281953_2388735998285578240_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=AXKxF-YgbgcAX81daLG&oh=a976d6d226e09a6edd8a3322559b6902&oe=5EAFE4BC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Поэтариум-Пространство Поэзии">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/12918016_1751489695065512_1610446544_a.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=kcPtyFjp7XkAX8i3OIt&oh=72042aeeb1defbd73eab46e40f0b1e75&oe=5EAE5772" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Электротеатр Станиславский">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="artmarinamorozova.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/47583754_2202151123177135_5731045948503621632_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=0b4OrlRrr5YAX-7-JUl&oh=6e1b9ab2abcd4300665abc3cbe53481c&oe=5EAEA36E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Marina Morozova">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -172,23 +184,11 @@
 					<div class="items-item">
 						<a href="insta.site.pro.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/73207866_2967471560144589_3058728519681966080_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=7jpafBUJ6lkAX_KAoo0&oh=a8d87aac3c50a4f9e877ee495da76205&oe=5EAD80A7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Insta-Site">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/73207866_2967471560144589_3058728519681966080_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=7jpafBUJ6lkAX_KAoo0&oh=2ed75d8a8fe5d1974578e532ffe88952&oe=5EB17527" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Insta-Site">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
 									<div><span><i class="fa" aria-hidden="true"></i>3840 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="items-item">
-						<a href="paramedicschool.ru.html" class="items-item__wrap">
-							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/44711805_2216900928578898_4734584845450084352_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=2dPtrXmGcnYAX8sRCSx&oh=022705f1a284724d2831a036512212c3&oe=5EAF6B53" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="PARAMEDIC SCHOOL (RUS. MOSCOW)">
-							</div>							
-							<div class="items-item__blind">
-								<div class="items-item__blind-wrap">
-									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
 								</div>
 							</div>
 						</a>
