--- a/mlm/mosbig.ru.html
+++ b/mlm/mosbig.ru.html
@@ -70,7 +70,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/72283588_1698642590268281_5131807399786577920_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=rDUtAd6h5CIAX-Sr69_&oh=66b45335c0ed54e78a645e2543495e30&oe=5EAD7223" alt="MOSBIG Москва">
+							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/72283588_1698642590268281_5131807399786577920_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=asKHA8ROU2MAX_Qfzmo&oh=1beef358bf5056e4a1136c24bfb022a7&oe=5EB166A3" alt="MOSBIG Москва">
 						</div>
 					</div>
 					<div class="main-sec__txt">
@@ -124,7 +124,7 @@
 					<div class="items-item">
 						<a href="pamiatnik_izgotovlenie_bobr.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/43318588_719591538442360_4656962592999211008_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=wK8BeeDBwyEAX_jottB&oh=6a604f5b5b9b84132a3c57488bca1998&oe=5EACF3CB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Памятники В Бобруйске">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/43318588_719591538442360_4656962592999211008_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=xNjBu2d-0uUAX_8deNv&oh=7f89feeb50bd5215e52cc43ea7a427bc&oe=5EB0E84B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Памятники В Бобруйске">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -158,9 +158,21 @@
 						</a>
 					</div>
 					<div class="items-item">
+						<a href="mirbezgranitssactress.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/80386090_190374002074957_706124801357381632_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=DiytVO72a4IAX9XiLIp&oh=2bb8bce297174bdbe39810a9d56cb076&oe=5EAE10EE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ораторское искусство">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
 						<a href="voronkova_life.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/72365509_2485436855067708_3803857641336209408_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=OBGrY7Upe4kAX83ZaPi&oh=64e590ec3279c64ec568f83950b08998&oe=5EACBCE8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/72365509_2485436855067708_3803857641336209408_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=OBGrY7Upe4kAX83ZaPi&oh=030736a628ba819fbfed4f8cd4463cac&oe=5EB0B168" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -172,7 +184,7 @@
 					<div class="items-item">
 						<a href="il_emelyanov.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/53568794_433968904014236_8279191517701079040_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=fOd5xlmd0h8AX9bC3kJ&oh=b0e8ff6bfd6d1fc813eaee47b759c611&oe=5EAD60BC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Спикер Илья Емельянов">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/53568794_433968904014236_8279191517701079040_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=b1I1Y2GbPUIAX-FSfq2&oh=bf0bbf531d6ede18ee503d84ec1d9c42&oe=5EAD60BC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Спикер Илья Емельянов">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -184,7 +196,43 @@
 					<div class="items-item">
 						<a href="valery21gal.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/11379943_615869935183397_411290850_a.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=1Y5Y7wL5byUAX-f-xKs&oh=cb1bc66ec6c10ffdbadcbecc9db6a46f&oe=5EABA48E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гальетов Валерий">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/11379943_615869935183397_411290850_a.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=1Y5Y7wL5byUAX-f-xKs&oh=ab323dfea52ca22852056435d1793a92&oe=5EAF990E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гальетов Валерий">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="alina_kuzyukova.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/91656827_511528409731553_7638422834254970880_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=n5HGfnTaMBgAX8O-FBj&oh=ef87c237317e0ce89c17e1e9fd0f0036&oe=5EAD966C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Оптовый интернет-магазин">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="aleksandr_galactic.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/69947036_450092462271149_5406982230704652288_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=Tf3ClhRv-3MAX_YqTRt&oh=b9716143c631bd110b5bbbd552907703&oe=5EAE3E97" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ВЕДУЩИЙ | АЛЕКСАНДР ГАЛАКТИК">
+							</div>							
+							<div class="items-item__blind">
+								<div class="items-item__blind-wrap">
+									<div><span><i class="fa" aria-hidden="true"></i>0 RUB</span> <span><i class="fa" aria-hidden="true"></i></span><span><i class="fa fa-external-link" aria-hidden="true"></i>Открыть</span></div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="items-item">
+						<a href="ms.svetagerman.html" class="items-item__wrap">
+							<div class="items-item__pic">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/87663536_240159510479157_3169688127895764992_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=azV7gGTK-CsAX-hi7n9&oh=eb53ec42eb2e2ecb01df63342111ae54&oe=5EB017E3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БРЕНД🔝ПРОДВИЖЕНИЕ🔝SMM">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
