--- a/mlm/online_francais.html
+++ b/mlm/online_francais.html
@@ -2,7 +2,7 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>MLM ФРАНЦУЗСКИЙ ОНЛАЙН ОБУЧЕНИЕ</title>
+    <title>MLM ФРАНЦУЗСКИЙ ОНЛАЙН.ИНСТАКУРС🔝</title>
     
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -12,10 +12,9 @@
     <meta name="description" content="ОКСАНА
 ⠀
 🇫🇷 Научу говорить, а не объясняться
-😉Найдем мотивацию,прогоним страхи
 💪Верю в каждого ученика 
 ⠀ ⠀
- ❗️КУРС А1  6 АПРЕЛЯ❗️
+ ❗️Курс  А1   6 апреля
  💥ЗАПИСЬ НА КУРСЫ⬇️">
     <meta name="keywords" content="MLM" />
     
@@ -45,14 +44,13 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
-    <meta property="og:title" content="MLM ФРАНЦУЗСКИЙ ОНЛАЙН ОБУЧЕНИЕ" />
+    <meta property="og:title" content="MLM ФРАНЦУЗСКИЙ ОНЛАЙН.ИНСТАКУРС🔝" />
     <meta property="og:description" content="ОКСАНА
 ⠀
 🇫🇷 Научу говорить, а не объясняться
-😉Найдем мотивацию,прогоним страхи
 💪Верю в каждого ученика 
 ⠀ ⠀
- ❗️КУРС А1  6 АПРЕЛЯ❗️
+ ❗️Курс  А1   6 апреля
  💥ЗАПИСЬ НА КУРСЫ⬇️" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="MLM online_francais" />
@@ -72,7 +70,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/91093303_271549550512438_5807255521786331136_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=g5-eSSAQsL4AX9RFesM&oh=c1179d2ae49c08726b28e4c1837b139d&oe=5EADEEE8" alt="ФРАНЦУЗСКИЙ ОНЛАЙН ОБУЧЕНИЕ">
+							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/91093303_271549550512438_5807255521786331136_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=g5-eSSAQsL4AX9RFesM&oh=0c9f195a14d9024dd4e102afb6683c86&oe=5EB1E368" alt="ФРАНЦУЗСКИЙ ОНЛАЙН.ИНСТАКУРС🔝">
 						</div>
 					</div>
 					<div class="main-sec__txt">
