--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="личный бренд брендинг маркетолог персональный виджет маркет олог уна заметку пер сональный нетворкинг продвижение бренда">
-    <meta name="keywords" content="личный бренд брендинг маркетолог персональный виджет маркет олог уна заметку пер сональный нетворкинг продвижение бренда" />
+    <meta name="description" content="">
+    <meta name="keywords" content="" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="ЛИЧНЫЙ БРЕНД: СОЗДАЙ СЕБЯ САМ" />
-    <meta property="og:description" content="личный бренд брендинг маркетолог персональный виджет маркет олог уна заметку пер сональный нетворкинг продвижение бренда" />
+    <meta property="og:description" content="" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="lichnyjbrend" />
 
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/80619981_518202375461718_8536892205455900672_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=alk2Qd-Cc_sAX8hh92c&oh=5497ef5b22fd7bfca1db6c50fdf9c9d5&oe=5EADE241" alt="ЛИЧНЫЙ БРЕНД В ПОИСКЕ ЯНДЕКСА"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/80619981_518202375461718_8536892205455900672_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=alk2Qd-Cc_sAX8hh92c&oh=cf414abc0713a460165d2c1c965bafd8&oe=5EB1D6C1" alt="ЛИЧНЫЙ БРЕНД В ПОИСКЕ ЯНДЕКСА"></div>
 							<div class="header__logo-txt">lichnyjbrend</div>
 						</a>
 						<div class="header__title">ЛИЧНЫЙ БРЕНД: СОЗДАЙ СЕБЯ САМ</div>
@@ -93,50 +93,6 @@
 		<div class="main"
 >
 
-		<div class="stories">
-			<div class="container">
-				<div class="stories__slider-wrap">
-					<div class="stories__slider" id="js-stories-slider">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<div class="stories__slide" title="пример">
-									<a href="./tags/./primer.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/primer.png);"></div>
-										<div class="stories__slide-txt" style="">пример</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="полезное">
-									<a href="./tags/./poleznoe.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/poleznoe.png);"></div>
-										<div class="stories__slide-txt" style="">полезное</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="сайт vs instagram">
-									<a href="./tags/./sayt-vs-instagram.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sayt-vs-instagram.png);"></div>
-										<div class="stories__slide-txt" style="">сайт vs instagram</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="руководство">
-									<a href="./tags/./rukovodstvo.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/rukovodstvo.png);"></div>
-										<div class="stories__slide-txt" style="">руководство</div>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="stories__arrow stories__arrow--prev" id="js-stories-prev"></div>
-					<div class="stories__arrow stories__arrow--next" id="js-stories-next"></div>
-				</div>
-			</div>
-		</div>
 
 			<div class="links-page">
 				<div class="container">
@@ -207,86 +163,6 @@
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./posts/./marafon-top-1-v-yandeks-za-52-dnya.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>62</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/77401447_1386038301555466_1622040459187427365_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=QmJ68xs9ynkAX-ss5i5&oh=e62d9f2be98ade9f19c31172e172f187&oe=5EAD6E43" alt="МАРАФОН ТОП 1 В ЯНДЕКС ЗА 52 ДНЯ.">
-									</div>
-									<div class="article-more__item-name" style="
-">МАРАФОН ТОП 1 В ЯНДЕКС ЗА 52 ДНЯ.</div>
-								</a>
-								<a href="./posts/./yandeks-drug-ili-vrag.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/79790831_614537529366448_9062720422726033156_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=luTZji7FRDwAX9Y-UYW&oh=3b81d51b7394efb03b792d0410e124d0&oe=5E872E8B" alt="Яндекс друг или враг?">
-									</div>
-									<div class="article-more__item-name" style="
-">Яндекс друг или враг?</div>
-								</a>
-								<a href="./posts/./internet-magazin-iz-instagram.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75238431_158864522129102_5950845889697453581_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=PqwoCkAqTg0AX_lL7Uk&oh=575231db6f8d0251a9606bbbf54dbf25&oe=5EADCBE9" alt="Интернет магазин из Инстаграм.">
-									</div>
-									<div class="article-more__item-name" style="
-">Интернет магазин из Инстаграм.</div>
-								</a>
-								<a href="./posts/./yuliya-svetlaya-otzyv---sayt-lichnogo.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>50</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/76843075_1066634027007369_4278440091711476964_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=hEAqqEuyCD4AX916rUw&oh=d37690c4666e2fbe13b4c47556b8bf4b&oe=5E8775A3" alt="ЮЛИЯ СВЕТЛАЯ ОТЗЫВ | САЙТ ЛИЧНОГО">
-									</div>
-									<div class="article-more__item-name" style="
-">ЮЛИЯ СВЕТЛАЯ ОТЗЫВ | САЙТ ЛИЧНОГО</div>
-								</a>
-								<a href="./posts/./lichnyy-brend-vs-torgovaya.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>48</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/80852899_615815152502863_4341489786325660903_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=vyu3DwzfSWwAX8uty9u&oh=9aeb00ee886429f3b207c952bf882d83&oe=5E8798C2" alt="ЛИЧНЫЙ БРЕНД vs ТОРГОВАЯ">
-									</div>
-									<div class="article-more__item-name" style="
-">ЛИЧНЫЙ БРЕНД vs ТОРГОВАЯ</div>
-								</a>
-								<a href="./posts/./est--li-zhizn--posle-instagram.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>46</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/76869345_597684174138315_7532595715082712217_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=1xBDp0Huxc0AX-kYGKi&oh=a9e5e1f58e70184c18df3488657fd9ff&oe=5EB04CBD" alt="Есть ли жизнь после Инстаграм?">
-									</div>
-									<div class="article-more__item-name" style="
-">Есть ли жизнь после Инстаграм?</div>
-								</a>
-								<a href="./posts/./kak-prodvigat--svoy-lichnyy-brend.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>46</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/79331798_2477731345775746_4390495093571331626_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=zlaIMU4WDmgAX8ReB8m&oh=774ecd77b0bec8fa895ff66a85d7cdea&oe=5E879639" alt="Как продвигать свой личный бренд">
-									</div>
-									<div class="article-more__item-name" style="
-">Как продвигать свой личный бренд</div>
-								</a>
-								<a href="./posts/./pochemu-tak-dyoshevo.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>45</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/77432716_183407479701357_6880064106298948035_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=K60Iqh6aCAoAX8ks34d&oh=9646287624f05eb5643e5dbdd7ba5826&oe=5E874AD7" alt="Почему так дёшево?">
-									</div>
-									<div class="article-more__item-name" style="
-">Почему так дёшево?</div>
-								</a>
 							</div>
 						</div>
 					</section>		
