--- a/mlm/insta.site.pro.html
+++ b/mlm/insta.site.pro.html
@@ -58,7 +58,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/73207866_2967471560144589_3058728519681966080_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=7jpafBUJ6lkAX_KAoo0&oh=a8d87aac3c50a4f9e877ee495da76205&oe=5EAD80A7" alt="Insta-Site">
+							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/73207866_2967471560144589_3058728519681966080_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=7jpafBUJ6lkAX_KAoo0&oh=2ed75d8a8fe5d1974578e532ffe88952&oe=5EB17527" alt="Insta-Site">
 						</div>
 					</div>
 					<div class="main-sec__txt">
@@ -111,7 +111,7 @@
 					<div class="items-item">
 						<a href="voobrazharoom.ru.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/29415358_567782043590589_720914761759326208_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=96OslsonPgIAX8GQgdD&oh=54241cf3ead78f8fe4662a20c5b74a85&oe=5EAD1374" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин Волгоград Пархоменко 5">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/29415358_567782043590589_720914761759326208_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=96OslsonPgIAX8GQgdD&oh=ba02dfcb0422bca74432f3d7a1da6898&oe=5EB107F4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин Волгоград Пархоменко 5">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -135,7 +135,7 @@
 					<div class="items-item">
 						<a href="online_francais.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/91093303_271549550512438_5807255521786331136_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=g5-eSSAQsL4AX9RFesM&oh=c1179d2ae49c08726b28e4c1837b139d&oe=5EADEEE8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ФРАНЦУЗСКИЙ ОНЛАЙН ОБУЧЕНИЕ">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/91093303_271549550512438_5807255521786331136_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=g5-eSSAQsL4AX9RFesM&oh=0c9f195a14d9024dd4e102afb6683c86&oe=5EB1E368" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ФРАНЦУЗСКИЙ ОНЛАЙН.ИНСТАКУРС🔝">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
