--- a/mlm/online_francais.html
+++ b/mlm/online_francais.html
@@ -14,7 +14,7 @@
 🇫🇷 Научу говорить, а не объясняться
 💪Верю в каждого ученика 
 ⠀ ⠀
- ❗️Курс  А1   13 апреля
+ ❗️Курс по грамматике  300руб❗️
  💥ЗАПИСЬ НА КУРСЫ⬇️">
     <meta name="keywords" content="MLM" />
     
@@ -50,7 +50,7 @@
 🇫🇷 Научу говорить, а не объясняться
 💪Верю в каждого ученика 
 ⠀ ⠀
- ❗️Курс  А1   13 апреля
+ ❗️Курс по грамматике  300руб❗️
  💥ЗАПИСЬ НА КУРСЫ⬇️" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="MLM online_francais" />
@@ -70,7 +70,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/91093303_271549550512438_5807255521786331136_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=g5-eSSAQsL4AX9RFesM&oh=0c9f195a14d9024dd4e102afb6683c86&oe=5EB1E368" alt="ФРАНЦУЗСКИЙ ОНЛАЙН.ИНСТАКУРС🔝">
+							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/91093303_271549550512438_5807255521786331136_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=OXjNMZdMETsAX-Dj_IF&oh=84fcd4363bd537fc2f5ae5c104c7cad9&oe=5EB1E368" alt="ФРАНЦУЗСКИЙ ОНЛАЙН.ИНСТАКУРС🔝">
 						</div>
 					</div>
 					<div class="main-sec__txt">
