--- a/mlm/lavantel_yugorsk.html
+++ b/mlm/lavantel_yugorsk.html
@@ -2,7 +2,7 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>MLM Биочистка Югорск, Советский🍀💜🍀</title>
+    <title>MLM Чистка одежды Югорск Советский</title>
     
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -42,7 +42,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
-    <meta property="og:title" content="MLM Биочистка Югорск, Советский🍀💜🍀" />
+    <meta property="og:title" content="MLM Чистка одежды Югорск Советский" />
     <meta property="og:description" content="💎Бережная чистка любимых вещей
 💜Эксклюзивный представитель бренда Lavantel
 📜Гарантия качества
@@ -66,7 +66,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/83139331_174905833849332_6964659726709686272_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=scwgGrCFRH8AX8Drxdg&oh=1ef8a06a690e9794e167215aa8e84195&oe=5EAF39D2" alt="Биочистка Югорск, Советский🍀💜🍀">
+							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/83139331_174905833849332_6964659726709686272_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=2zWR7hPvTDAAX_U1Kop&oh=93d9204dc0383eb320191a8a09712dd1&oe=5EB32E52" alt="Чистка одежды Югорск Советский">
 						</div>
 					</div>
 					<div class="main-sec__txt">
