--- a/mlm/zhanna.media.html
+++ b/mlm/zhanna.media.html
@@ -10,10 +10,9 @@
 	<link rel="stylesheet" href="../css/style.css"/>
     
     <meta name="description" content="Жанна Пампура
-💎масштабирую руководителей бизнеса в экспертов 
+💎превращаю экспертность в деньги и влияние 
 🔹20 лет в СМИ и коммуникациях
-🌏заражаю любовью к другим культурам 🇫🇷 🇬🇧 
-👇консультирую">
+🌏 вижу возможности для бизнеса, где другие не видят">
     <meta name="keywords" content="MLM" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
@@ -44,10 +43,9 @@
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="MLM Личный бренд | PR | Медиа" />
     <meta property="og:description" content="Жанна Пампура
-💎масштабирую руководителей бизнеса в экспертов 
+💎превращаю экспертность в деньги и влияние 
 🔹20 лет в СМИ и коммуникациях
-🌏заражаю любовью к другим культурам 🇫🇷 🇬🇧 
-👇консультирую" />
+🌏 вижу возможности для бизнеса, где другие не видят" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="MLM zhanna.media" />
 </head>
@@ -66,7 +64,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/61756629_2351410164935961_8803894787351511040_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=dqxHgkcw-s4AX8N4FTA&oh=03d1b5be667e3b084d52863bbac5a71f&oe=5EAF463D" alt="Личный бренд | PR | Медиа">
+							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/61756629_2351410164935961_8803894787351511040_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=dqxHgkcw-s4AX8N4FTA&oh=52e12dde757630845e069dc610c72012&oe=5EB33ABD" alt="Личный бренд | PR | Медиа">
 						</div>
 					</div>
 					<div class="main-sec__txt">
